# thoughtful

./: output.txt  pyproject.toml  test_file.txt
challenge/: Poulsen_Wes - Customer Engineer Submission.py  q8.py
tests/: test_functions.py
